fix overlap

--- a/css/main.css
+++ b/css/main.css
@@ -162,6 +162,7 @@ a:visited {
   height: 70px;
   border-radius: 6px;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.4);
+  margin-bottom: 30px;
 }
 
 .cover-wrapper {
